Product Controller and service added